--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "type": "module",
   "dependencies": {
-    "d3-array": "^3.1.1"
+    "d3-array": "^3.1.1",
+    "d3-fetch": "^3.0.1"
   }
 }
